--- a/index.html
+++ b/index.html
@@ -1,19 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/index.js">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-</head>
-<body>
-    <section>
-        <nav>
-world
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/index.js" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"/>
+  </head>
+  <body>
+    <section id="landing">
+      <nav>
+        <div class="nav__container">
+            <img src="./assets/Library.svg" alt="">
+            <ul class="nav__links">
+                <li><a href="#" class="nav__link">Home</a></li>
+                <li><a href="#" class="nav__link">Contact</a></li>
+                <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+            </ul>
+        </div>
         </nav>
-        <header>
-        </header>
+      <header>
+        <div class="header__container">
+            <div class="header__description">
+                <h1>America's most awarded online library platform</h1>
+                <h2>Find you dream book with <span class="purple">library</span></h2>
+                <button class="btn">Browse Books</button>
+            </div>
+            <figure class="header__img--wrapper">
+                <img src="./assets/Undraw_Books.svg" alt="">
+            </figure>
+        </div>
+      </header>
     </section>
-</body>
+
+    <main>
+        <section id="highlights">
+            <div class="container">
+                <div class="row">
+                   <h2>
+                    Why choose <span class="purple">library</span>
+                   </h2> 
+                </div>
+            </div>
+        </section>
+        <section id="features">
+            <div class="container">
+                <div class="row">
+
+                </div>
+            </div>
+        </section>
+        <section id="recent">
+            <div class="container">
+                <div class="row">
+
+                </div>
+            </div>
+        </section>
+    </main>
+  </body>
 </html>
